01-helm-chart-layout/templates/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microapp-a
  labels:
    app: microapp-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microapp-a
  template:
    metadata:
      labels:
        app: microapp-a
    spec:
      containers:
      - name: microapp-a
        image: docker.io/library/micro-a:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
