01-helm-chart-layout/templates/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: microapp-service-b
spec:
  selector:
    app: microapp-b
  type: ClusterIP
  ports:
  - name: root
    protocol: TCP
    port: 80
    targetPort: 80
