01-helm-chart-layout/templates/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: microapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
